--- a/html/index.html
+++ b/html/index.html
@@ -15,19 +15,19 @@
 </head>
 
 <body>
-
     <style type="text/css">
         body{
+
             background: -webkit-linear-gradient(left, #f2ddd3, #ebc2af); 
             background: -o-linear-gradient(right, #f2ddd3, #ebc2af);
             background: -moz-linear-gradient(right, #f2ddd3, #ebc2af); 
-            background: linear-gradient(to right, #f2ddd3, #ebc2af); 
+            background: linear-gradient(to right, #f2ddd3, #ebc2af); background: url(img/1.png) top 130px right/761px 500px no-repeat,
+            url(img/3.png) top 650px left /579px 500px no-repeat;
             background-color: #f2ddd3;
         }
     </style>
 
     <header>
-
         <div class="header">
             <img src="img/6.png" alt="logo" />
             <center>
@@ -36,38 +36,30 @@
         </div>
     </header>
 
-    <p></p>
-    <div class="img1"></div>
-    <div class="img2"></div>
+    
+    
     <center>
-        <div class="container">
-
-            <div class="box">
-                <p></p>
-            </div>
-
-
-            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-            <div class="example-1">
-              <div class="form-group">
-                <label class="label">
-                    <input  name="file" id="input" type="file" accept="image/*" onchange="init(this.files)">
-                    <i class="material-icons">attach_file</i>
-                    <span class="title">Добавить файл</span>
-                    <input type="file">
-                </label>
+        <div class="content">
+            <div class="container">
+                <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+                <div class="example-1">
+                  <div class="form-group">
+                    <label class="label">
+                        <input  name="file" id="input" type="file" accept="image/*" onchange="init(this.files)">
+                        <i class="material-icons">attach_file</i>
+                        <span class="title">Добавить файл</span>
+                        <input type="file">
+                    </label>
+                </div>
             </div>
         </div>
 
-        <p></p>
         <p><small>Модель умеет распознавать более 100 видов птиц</small></p>
         <p id="preview" class="mt-3">
             <img src="" id="image">
         </p>
         <p id="result"></p>
     </div>
-
 
     <script type="text/javascript">
         let date = document.getElementById('date');
@@ -79,7 +71,13 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-
+    <footer>
+        <section id="footer">
+          <div class="footer"><i class="fa-solid fa-copyright"></i>  
+            <b>Проект команды NL<small> (Иброхимов Аброрбек, Бирюков Павел, Мирошниченко Виктор)</small> г.Екатеринбург 2023г.</b> 
+        </div>
+    </section>
+</footer>
 </center> 
 </body>
 </html>
